--- a/frontend/src/pages/main/style.module.scss
+++ b/frontend/src/pages/main/style.module.scss
@@ -1,6 +1,23 @@
 .wrapper {
-    width: 50vw;
     display: flex;
     flex-direction: column;
     margin: 0 auto;
+    gap: 15px;
+    margin-top: 10dvh;
+    width: 50vw;
+
+    @media (max-width: 500px) {
+        width: 95vw;
+      }
+
+    .controls {
+        display: flex;
+        justify-content: space-between;
+        margin: 0 auto;
+        gap: 15px;
+
+        @media (max-width: 500px) {
+            margin: 15px;
+          }
+    }
 }
