--- a/frontend/src/ui/match-card/style.module.scss
+++ b/frontend/src/ui/match-card/style.module.scss
@@ -1,15 +1,15 @@
 .match_card {
     display: flex;
     gap: 15px;
-    justify-content: space-around;
+    margin: 0 auto;
     align-items: center;
-    border: 1px solid black;
+    border-radius: 15px;
+    padding: 10px;
+    background-color: var(--bg-dark);
+    color: var(--light);
 
-    img {
-        width: 50px;
-    }
-    span {
-        font-size: 1.5rem;
+    .currentScore {
+        font-size: calc(15px + 0.390625vw);
     }
 }
 
