--- a/frontend/src/ui/match-card/style.module.scss
+++ b/frontend/src/ui/match-card/style.module.scss
@@ -7,6 +7,8 @@
     padding: 10px;
     background-color: var(--bg-dark);
     color: var(--light);
+    width: 100%;
+    justify-content: center;
 
     .currentScore {
         font-size: calc(15px + 0.390625vw);
