--- a/frontend/src/ui/atoms/select/style.module.scss
+++ b/frontend/src/ui/atoms/select/style.module.scss
@@ -1,10 +1,15 @@
 .select {
     display: flex;
     flex-direction: column;
+    font-size: 1.5rem;
 
     select {
         border: unset;
         background-color: transparent;
         outline: 0;
+        
+        option {
+            padding: 5px;
+        }
     }
 }
