--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,6 +22,7 @@ body {
   font-family: "Oswald", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
+  font-size: clamp(0.5rem, 4vw, 2rem);
 }
 
 h1, h2, h3, h4, h5, h6 {
