--- a/frontend/src/pages/main/style.module.scss
+++ b/frontend/src/pages/main/style.module.scss
@@ -1,3 +1,5 @@
+@import 'ui/variables.scss';
+
 .wrapper {
     display: flex;
     flex-direction: column;
@@ -6,9 +8,10 @@
     margin-top: 10dvh;
     width: 50vw;
 
-    @media (max-width: 500px) {
+    @media (max-width: $breakpoint-l) {
         width: 95vw;
       }
+
 
     .controls {
         display: flex;
