--- a/frontend/src/ui/team/style.module.scss
+++ b/frontend/src/ui/team/style.module.scss
@@ -1,14 +1,13 @@
 .team {
 
-    width: 150px;
+    width: 250px;
     display: flex;
     flex-direction: column;
     align-items: center;
 
     img {
-        width: 50px;
+        width: 100px;
+        height: 100px;
     }
-    span {
-        font-size: 1.5rem;
-    }
+
 }
