--- a/frontend/src/ui/atoms/select/style.module.scss
+++ b/frontend/src/ui/atoms/select/style.module.scss
@@ -5,10 +5,9 @@
     select {
         border: unset;
         background-color: transparent;
+        padding: 15px;
+        padding-bottom: 0;
         outline: 0;
         appearance: none;
-        option {
-            padding: 5px;
-        }
     }
 }
