--- a/frontend/src/ui/match-card/style.module.scss
+++ b/frontend/src/ui/match-card/style.module.scss
@@ -5,10 +5,16 @@
     align-items: center;
     border-radius: 15px;
     padding: 10px;
-    background-color: var(--bg-dark);
-    color: var(--light);
+    background-color: var(--light);
+    border: 1px solid var(--bg-dark);
+    color: var(--bg-dark);
     width: 100%;
     justify-content: center;
+
+    &:hover {
+        opacity: 0.5;
+        cursor: pointer;
+    }
 }
 
 
